Fox Jumping Scrollbar Issue

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,6 +6,10 @@ body {
     Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 
+html {
+  overflow-y: scroll;
+}
+
 a {
   color: inherit;
   text-decoration: none;
